--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,10 @@
         </activity>
 
         <activity android:name=".WebActivity">
+
         </activity>
+
+        <activity android:name=".DetailActivity"/>
     </application>
 
 </manifest>
